--- a/index.html
+++ b/index.html
@@ -4,38 +4,34 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-        rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
-        integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp"
-        crossorigin="anonymous"
+			href="https://fonts.googleapis.com/css2?family=Courgette&display=swap"
+			rel="stylesheet"
 		/>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
+			integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp"
+			crossorigin="anonymous"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
+		/>
 		<title>Random Card Generator</title>
-        <link rel="stylesheet" href="/style.css">
+		<link rel="stylesheet" href="/style.css" />
 	</head>
 
 	<body>
-
-        <div class="row my-3">
-            <div class="col-5"></div>
-            <div id="card" class="card col">
-                <div class="card-body">
-                </div>
-            </div>
-            <div class="col-5"></div>
-        </div>
-
-        <div class="row">
-            <div class="col-5"></div>
-        <div class="d-grid gap-2">
-            <button type="button" class="btn btn-primary">Draw a new Card</button>
-        </div>
-        <div class="col-5"></div>
-</div>
+		<div class="row my-3">
+			<div class="col-5"></div>
+			<div id="card" class="card col">
+				<div class="card-body"></div>
+			</div>
+			<div class="col-5"></div>
+		</div>
 
 		<script src="./script.js"></script>
 		<script
