--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	</head>
 
 	<body>
-		<div class="row my-3">
+		<div class="row my-3 text-center">
 			<div class="col-5"></div>
 			<div id="card" class="card col">
 				<div class="card-body"></div>
