--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
 			</div>
 			<div class="col-5"></div>
 		</div>
-
+        <div class="d-grid gap-2 col-6 mx-auto">
+            <button id="newCard" class="btn btn-primary" type="button">New Card</button>
+            <button id="newDeck" class="btn btn-secondary" type="button">Shuffle</button>
+        </div>
 		<script src="./script.js"></script>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
