Agregando barajas boca abajo

--- a/index.html
+++ b/index.html
@@ -25,16 +25,18 @@
 	</head>
 
 	<body>
-		<div class="row my-3 text-center">
-			<div class="col-5"></div>
-			<div id="card" class="card col">
+		<div class="row my-3 text-center m-5">
+            <div id="deck" class="card col-3"></div>
+            <div class="col"></div>
+			<div id="card" class="card col-3">
 				<div class="card-body"></div>
 			</div>
-			<div class="col-5"></div>
+            <div class="col"></div>
+            <div id="down" class="card col-3"></div>
 		</div>
         <div class="d-grid gap-2 col-6 mx-auto">
-            <button id="newCard" class="btn btn-primary" type="button">New Card</button>
-            <button id="newDeck" class="btn btn-secondary" type="button">Shuffle</button>
+            <button id="newCard" class="btn btn-primary" type="button">Nueva Carta</button>
+            <button id="newDeck" class="btn btn-secondary" type="button">Revuelve</button>
         </div>
 		<script src="./script.js"></script>
 		<script
