--- a/index.html
+++ b/index.html
@@ -25,14 +25,22 @@
 	</head>
 
 	<body>
-		<div class="row my-3 text-center m-5">
-            <div id="deck" class="card col-3"></div>
+		<div class="row mx-5 my-2">
+
+            <div id="deck" class="card col-3">
+                <img src="/img/decksback.jpg" alt="">
+            </div>
+
             <div class="col"></div>
-			<div id="card" class="card col-3">
-				<div class="card-body"></div>
-			</div>
+
+			<div id="card" class="card col-3"></div>
+
             <div class="col"></div>
-            <div id="down" class="card col-3"></div>
+
+            <div id="down" class="card col-3">
+                <img src="/img/decksback.jpg" alt="">
+            </div>
+
 		</div>
         <div class="d-grid gap-2 col-6 mx-auto">
             <button id="newCard" class="btn btn-primary" type="button">Nueva Carta</button>
